samples/_failures_safe/1761362978_c098a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c0011fb.c: In function ‘main’:
./samples/SAFE/__tmp_4c0011fb.c:157:16: error: expected ‘)’ at end of input
  157 |     if (!tokens
      |        ~       ^
      |                )
./samples/SAFE/__tmp_4c0011fb.c:157:5: error: expected declaration or statement at end of input
  157 |     if (!tokens
      |     ^~
